fix for li's not showing up

--- a/assets/scss/_general.scss
+++ b/assets/scss/_general.scss
@@ -570,6 +570,7 @@ main {
 		}
 	}
 	.side-section-right {
+		font-size: 18px;
 		width: 66.66%;
 		display: inline-block;
 		@media screen and (max-width: 999px) {
